# Go-HTTP-Service

./: .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  coverage  coverage.out  coverage_handlers.out  go.mod  main.go  main_test.go  pyproject.toml  test_server.ps1
.github/workflows/: docker-image.yml  release.yml
handlers/: basicHandlers.go  basicHandlers_test.go  cpuBoundHandlers.go  cpuBoundHandlers_test.go  handlers.go  handlers_test.go  ioboundHandlers.go  ioboundHandlers_test.go  jobHandlers.go  jobs.json  jobs_test.go  taskExecutor.go  test_mandelbrot.pgm
pruebas/: generador.go
server/: counter.go  jobmanager.go  metrics.go  queue.go  router.go  server.go  workerpool.go
